# rust_blockchain

./: Cargo.toml
src/: main.rs
src/modules/: app.rs  client.rs  mod.rs
src/modules/blockchain/: block.rs  chain.rs
templates/: base.html  index.html
