[package]
edition = "2018"
name = "ultra_blockchain"
version = "0.1.0"

[[bin]]
name = "versus"
path = "src/main.rs"

[dependencies]
actix-web = "4.3.1"
cargo-watch = "8.4.0"
crypto-hash = "0.3.4"
reqwest = "0.11.18"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sha2 = "0.10.7"
tokio = {version = "1.29.1", features = ["full"]}
